[gd_scene load_steps=6 format=3 uid="uid://bju2p4ayn6gr1"]

[ext_resource type="Script" uid="uid://t73tbrl81fbd" path="res://main.gd" id="1_1bvp3"]
[ext_resource type="PackedScene" uid="uid://capv1tkqxflob" path="res://Auth/Login.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://e1ksu77hx2b1" path="res://conexion/conectando.tscn" id="2_lquwl"]
[ext_resource type="PackedScene" uid="uid://755crq4hxdue" path="res://Auth/interface_registro.tscn" id="3_lquwl"]
[ext_resource type="PackedScene" uid="uid://do3ns68yhh8y" path="res://main menu/main_menu.tscn" id="5_lquwl"]

[node name="Main" type="Node"]
script = ExtResource("1_1bvp3")

[node name="Conectando" parent="." instance=ExtResource("2_lquwl")]
visible = false

[node name="Login" parent="." instance=ExtResource("1_ig7tw")]
visible = false

[node name="InterfaceRegistro" parent="." instance=ExtResource("3_lquwl")]
visible = false

[node name="MainMenu" parent="." instance=ExtResource("5_lquwl")]
visible = false

[connection signal="boton_registrar_presionado" from="Login" to="." method="_on_login_boton_registrar_presionado"]
[connection signal="login_ok" from="Login" to="." method="_on_login_login_ok"]
[connection signal="back_button_pressed" from="InterfaceRegistro" to="." method="_on_interface_registro_back_button_pressed"]
[connection signal="usuario_creado" from="InterfaceRegistro" to="." method="_on_interface_registro_usuario_creado"]
